# capcut_agents

./: .env.example  .gitignore  README.md  analyze_capcut_json.py  extract_stt.py  gui.py  mcp_server.py  pyproject.toml  run_agent.bat  test_agent.py  test_cuda.py  test_stt_clean.py  test_stt_root.py  test_whisper_cuda.py  torch_cuda_설치.bat  서버실행법.txt  설치.bat  실행.bat
reference/com.lveditor.draft/0226/: attachment_editing.json  draft_biz_config.json  draft_meta_info.json  draft_settings  draft_virtual_store.json  key_value.json  template-2.tmp  template.tmp  timeline_layout.json
reference/com.lveditor.draft/0226/subdraft/9774F427-20AD-4166-8D65-E744B4317C63/: draft_content.json  sub_draft_config.json
src/capcut_agents_260309/: crew.py  main.py
src/capcut_agents_260309/config/: agents.yaml  tasks.yaml
src/capcut_agents_260309/tools/: custom_tool.py  stt_tool.py  sync_tool.py  vision_tool.py
test_scripts/: check_audio.py  check_audio_2.py  check_audio_3.py  check_audio_4.py  debug_sync.py  find_peak.py  sync_result.json  test_ffmpeg_audio.py  test_sync.py
