[project]
name = "capcut_agents_260309"
version = "0.1.0"
description = "capcut_agents_260309 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1",
    "langchain-google-genai",
    "python-dotenv",
    "moviepy>=1.0.3",
    "SpeechRecognition>=3.10.0",
    "opencv-python>=4.8.0.76",
    "flask",
    "scipy>=1.15.3",
    "numpy>=2.2.6",
    "uuid>=1.30",
    "faster-whisper>=1.2.1",
    "pyannote-audio>=4.0.4",
    "customtkinter>=5.2.0",
    "tkinterdnd2>=0.3.0",
]

[project.scripts]
capcut_agents_260309 = "capcut_agents_260309.main:run"
run_crew = "capcut_agents_260309.main:run"
train = "capcut_agents_260309.main:train"
replay = "capcut_agents_260309.main:replay"
test = "capcut_agents_260309.main:test"
run_with_trigger = "capcut_agents_260309.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
